--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,4 +7,168 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
+    <TextView
+        android:id="@+id/home_greetings_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="60dp"
+        android:text="Happy Cooking"
+        android:textSize="20sp"
+        android:fontFamily="@font/jakartasanssemibold"
+        android:textColor="@color/text_disable_secondary"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/home_greetings_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/home_greetings_label"
+        app:layout_constraintTop_toTopOf="@id/home_greetings_label"
+        app:layout_constraintBottom_toBottomOf="@id/home_greetings_label"
+        android:src="@drawable/navigation_home_greetings_icon"/>
+
+    <TextView
+        android:id="@+id/home_greetings_user_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_disable"
+        android:text="Elisia Safina"
+        android:fontFamily="@font/jakartasansbold"
+        android:textSize="42sp"
+        app:layout_constraintTop_toBottomOf="@id/home_greetings_label"
+        app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
+
+    <TextView
+        android:id="@+id/home_search_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_disable"
+        android:text="Find Recipes"
+        android:fontFamily="@font/jakartasanssemibold"
+        android:textSize="14sp"
+        android:layout_marginTop="62dp"
+        app:layout_constraintTop_toBottomOf="@id/home_greetings_user_label"
+        app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
+
+    <EditText
+        android:id="@+id/home_search_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edit_text_style_secondary"
+        android:padding="14dp"
+        android:fontFamily="@font/jakartasanssemibold"
+        android:textColor="@color/primary"
+        android:textSize="16sp"
+        android:textColorHint="@color/text_disable"
+        android:hint="Username"
+        android:layout_marginTop="18dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintTop_toBottomOf="@id/home_search_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="MissingConstraints"/>
+
+    <TextView
+        android:id="@+id/home_popular_recipes_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_disable"
+        android:text="Popular Recipes"
+        android:fontFamily="@font/jakartasanssemibold"
+        android:textSize="18sp"
+        android:layout_marginTop="62dp"
+        app:layout_constraintTop_toBottomOf="@id/home_search_text"
+        app:layout_constraintLeft_toLeftOf="@id/home_search_text"/>
+
+    <Button
+        android:id="@+id/home_see_all_recipes_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="See All"
+        android:fontFamily="@font/jakartasanssemibold"
+        android:textColor="@color/text_disable"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="@id/home_popular_recipes_label"
+        app:layout_constraintRight_toRightOf="@id/home_search_text"
+        android:layout_marginRight="20dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view_recipes"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        app:layout_constraintTop_toBottomOf="@id/home_popular_recipes_label"
+        app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
+        android:orientation="horizontal"
+        tools:listitem="@layout/item_home_recipes_card"/>
+
+
+    <LinearLayout
+        android:id="@+id/home_frame_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
+        android:paddingLeft="35dp"
+        android:paddingRight="35dp">
+
+        <ImageButton
+            android:id="@+id/navigation_home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="10dp"
+            android:src="@drawable/navigation_home_icon"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+        <ImageButton
+            android:id="@+id/navigation_list_recipes_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="10dp"
+            android:src="@drawable/navigation_list_icon"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+        <ImageButton
+            android:id="@+id/navigation_liked_recipes_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="10dp"
+            android:src="@drawable/navigation_favorite_icon"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+        <ImageButton
+            android:id="@+id/navigation_edit_recipes_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="10dp"
+            android:src="@drawable/navigation_edit_recipes_icon"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+        <ImageButton
+            android:id="@+id/navigation_account_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="10dp"
+            android:src="@drawable/navigation_account_icon"
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
