--- a/app/src/main/res/layout/activity_list_recipes.xml
+++ b/app/src/main/res/layout/activity_list_recipes.xml
@@ -5,10 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".ListRecipesActivity">
 
     <TextView
-        android:id="@+id/home_greetings_label"
+        android:id="@+id/list_recipes_greetings_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,93 +22,36 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/home_greetings_icon"
+        android:id="@+id/list_recipes_greetings_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toLeftOf="@+id/home_greetings_label"
-        app:layout_constraintTop_toTopOf="@id/home_greetings_label"
-        app:layout_constraintBottom_toBottomOf="@id/home_greetings_label"
+        app:layout_constraintRight_toLeftOf="@+id/list_recipes_greetings_label"
+        app:layout_constraintTop_toTopOf="@id/list_recipes_greetings_label"
+        app:layout_constraintBottom_toBottomOf="@id/list_recipes_greetings_label"
         android:src="@drawable/navigation_home_greetings_icon"/>
 
     <TextView
-        android:id="@+id/home_greetings_user_label"
+        android:id="@+id/list_recipes_desc_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_disable"
-        android:text="Elisia Safina"
-        android:fontFamily="@font/jakartasansbold"
-        android:textSize="42sp"
-        app:layout_constraintTop_toBottomOf="@id/home_greetings_label"
-        app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
-
-    <TextView
-        android:id="@+id/home_search_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_disable"
-        android:text="Find Recipes"
+        android:text="Available Recpies"
         android:fontFamily="@font/jakartasanssemibold"
-        android:textSize="14sp"
-        android:layout_marginTop="62dp"
-        app:layout_constraintTop_toBottomOf="@id/home_greetings_user_label"
-        app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
-
-    <EditText
-        android:id="@+id/home_search_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edit_text_style_secondary"
-        android:padding="14dp"
-        android:fontFamily="@font/jakartasanssemibold"
-        android:textColor="@color/primary"
-        android:textSize="16sp"
-        android:textColorHint="@color/text_disable"
-        android:hint="Ayam Geprek"
-        android:layout_marginTop="18dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        app:layout_constraintTop_toBottomOf="@id/home_search_label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="MissingConstraints"/>
-
-    <TextView
-        android:id="@+id/home_popular_recipes_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_disable"
-        android:text="Popular Recipes"
-        android:fontFamily="@font/jakartasanssemibold"
-        android:textSize="18sp"
-        android:layout_marginTop="62dp"
-        app:layout_constraintTop_toBottomOf="@id/home_search_text"
-        app:layout_constraintLeft_toLeftOf="@id/home_search_text"/>
-
-    <Button
-        android:id="@+id/home_see_all_recipes_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="See All"
-        android:fontFamily="@font/jakartasanssemibold"
-        android:textColor="@color/text_disable"
-        android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="@id/home_popular_recipes_label"
-        app:layout_constraintRight_toRightOf="@id/home_search_text"
-        android:layout_marginRight="20dp"/>
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/list_recipes_greetings_label"
+        app:layout_constraintLeft_toLeftOf="@id/list_recipes_greetings_icon"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view_recipes"
+        android:id="@+id/list_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
-        app:layout_constraintTop_toBottomOf="@id/home_popular_recipes_label"
-        app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
+        android:layout_height="700dp"
+        app:layout_constraintTop_toBottomOf="@id/list_recipes_desc_label"
+        app:layout_constraintBottom_toTopOf="@id/list_recipes_frame_navigation"
         android:orientation="horizontal"
         tools:listitem="@layout/item_home_recipes_card"/>
 
-
     <LinearLayout
-        android:id="@+id/home_frame_navigation"
+        android:id="@+id/list_recipes_frame_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -127,7 +70,6 @@
             android:background="@drawable/button_style_whithout_backgorund"
             android:padding="10dp"
             android:src="@drawable/navigation_home_icon"
-            app:tint="@color/primary"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
@@ -138,6 +80,7 @@
             android:background="@drawable/button_style_whithout_backgorund"
             android:padding="10dp"
             android:src="@drawable/navigation_list_icon"
+            app:tint="@color/primary"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
@@ -171,5 +114,6 @@
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
