--- a/app/src/main/res/layout/item_liked_recipes_card.xml
+++ b/app/src/main/res/layout/item_liked_recipes_card.xml
@@ -1,12 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="200dp"
-    android:layout_height="320dp"
-    android:layout_marginTop="40dp"
-    android:layout_marginRight="40dp"
-    android:layout_marginBottom="40dp"
-    app:cardCornerRadius="10dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="140dp"
+    android:layout_marginBottom="30dp"
+    app:cardCornerRadius="16dp">
 
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,24 +36,39 @@
             android:textColor="@android:color/white"
             android:textSize="18sp"/>
 
+        <ImageButton
+            android:id="@+id/liked_button_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/button_style_whithout_backgorund"
+            android:padding="2dp"
+            android:src="@drawable/navigation_favorite_icon"
+            app:tint="@android:color/white"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/face_card_icon"
+            android:layout_gravity="end"
+            android:layout_marginRight="140dp"
+            android:layout_marginTop="90dp"
+            />
+
         <TextView
             android:id="@+id/recipes_creator_name"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:text="Bunda Rahma"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:fontFamily="@font/jakartasansmedium"
-            android:padding="20dp"/>
-
-        <ImageView
-            android:id="@+id/icon_recipes_creator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginTop="280dp"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/face_card_icon"/>
+            android:layout_marginTop="70dp"
+            android:fontFamily="@font/jakartasansmedium"
+            android:padding="20dp"
+            android:text="Bunda Rahma"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+
     </FrameLayout>
 </androidx.cardview.widget.CardView>
