--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,17 +39,17 @@
         android:id="@+id/register_username_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="Email"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="18dp"
         app:layout_constraintTop_toBottomOf="@id/register_desc_label"
-        app:layout_constraintBottom_toTopOf="@id/register_username_text"
-        app:layout_constraintLeft_toLeftOf="@id/register_username_text"/>
+        app:layout_constraintBottom_toTopOf="@id/register_email_text"
+        app:layout_constraintLeft_toLeftOf="@id/register_email_text"/>
 
     <EditText
-        android:id="@+id/register_username_text"
+        android:id="@+id/register_email_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_style"
@@ -57,7 +57,7 @@
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
-        android:hint="Username"
+        android:hint="Email"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/register_username_label"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -72,7 +72,7 @@
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="18dp"
-        app:layout_constraintTop_toBottomOf="@id/register_username_text"
+        app:layout_constraintTop_toBottomOf="@id/register_email_text"
         app:layout_constraintBottom_toTopOf="@id/register_password_text"
         app:layout_constraintLeft_toLeftOf="@id/register_password_text"/>
 
