--- a/app/src/main/res/layout/activity_list_recipes.xml
+++ b/app/src/main/res/layout/activity_list_recipes.xml
@@ -44,11 +44,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
+        android:layout_height="680dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         app:layout_constraintTop_toBottomOf="@id/list_recipes_desc_label"
         app:layout_constraintBottom_toTopOf="@id/list_recipes_frame_navigation"
         android:orientation="horizontal"
-        tools:listitem="@layout/item_home_recipes_card"/>
+        tools:listitem="@layout/item_list_recipes_card"/>
 
     <LinearLayout
         android:id="@+id/list_recipes_frame_navigation"
