--- a/app/src/main/res/layout/item_list_recipes_card.xml
+++ b/app/src/main/res/layout/item_list_recipes_card.xml
@@ -27,7 +27,7 @@
         <!--  TextView partially overlaying the image  -->
         <TextView
             android:id="@+id/list_recipe_name_card"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:padding="18dp"
