--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -73,12 +73,12 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:ignore="MissingConstraints"/>
 
-    <TextView
-        android:id="@+id/home_popular_recipes_label"
+    <Button
+        android:id="@+id/home_randomize_recipes_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/text_disable"
-        android:text="Popular Recipes"
+        android:text="Randomize Recipes"
         android:fontFamily="@font/jakartasanssemibold"
         android:textSize="18sp"
         android:layout_marginTop="62dp"
@@ -93,7 +93,7 @@
         android:fontFamily="@font/jakartasanssemibold"
         android:textColor="@color/text_disable"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="@id/home_popular_recipes_label"
+        app:layout_constraintTop_toTopOf="@id/home_randomize_recipes_button"
         app:layout_constraintRight_toRightOf="@id/home_search_text"
         android:layout_marginRight="20dp"/>
 
@@ -101,7 +101,7 @@
         android:id="@+id/home_recycle_view_recipes"
         android:layout_width="match_parent"
         android:layout_height="420dp"
-        app:layout_constraintTop_toBottomOf="@id/home_popular_recipes_label"
+        app:layout_constraintTop_toBottomOf="@id/home_randomize_recipes_button"
         app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
         android:orientation="horizontal"
         tools:listitem="@layout/item_home_recipes_card"/>
