--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,9 +126,10 @@
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@android:color/white"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/button_style"
         app:layout_constraintTop_toBottomOf="@id/login_register_label"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
