--- a/app/src/main/res/layout/activity_action_recipes.xml
+++ b/app/src/main/res/layout/activity_action_recipes.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_action_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActionRecipesActivity">
@@ -10,7 +10,7 @@
     <FrameLayout
         android:id="@+id/action_recipes_image_frame"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="160dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/button_style_rounded"
             android:fontFamily="@font/jakartasansmedium"
             android:padding="10dp"
@@ -45,7 +45,7 @@
     <LinearLayout
         android:id="@+id/action_menu_add_frame"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/action_recipes_image_frame"
         android:orientation="horizontal">
 
@@ -68,16 +68,17 @@
 
         <Button
             android:id="@+id/action_add_recipes_button"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="110dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/button_style_rounded"
             android:fontFamily="@font/jakartasansmedium"
             android:padding="10dp"
-            android:text="Add Recipes"
+            android:text="Add"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="14dp"
+            android:textSize="12dp"
             tools:ignore="TextSizeCheck" />
 
     </LinearLayout>
@@ -87,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="name recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -97,24 +99,26 @@
         android:id="@+id/action_add_name_recipes_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edit_text_style"
-        android:padding="14dp"
-        android:fontFamily="@font/jakartasansmedium"
-        android:textColor="@color/primary"
-        android:textColorHint="@color/text_disable"
-        android:hint="Ayam Geprek Furina"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
-        app:layout_constraintTop_toBottomOf="@id/action_add_name_recipes_label"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_style"
+        android:fontFamily="@font/jakartasansmedium"
+        android:hint="Ayam Geprek Furina"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/primary"
+        android:textColorHint="@color/text_disable"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@id/action_add_name_recipes_label"
+        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/action_add_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="type Recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -126,13 +130,15 @@
         android:id="@+id/action_add_type_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edit_text_style"
-        android:padding="14dp"
-        android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/action_add_type_label"
         android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"/>
+        android:layout_marginRight="18dp"
+        android:background="@drawable/edit_text_style"
+        android:fontFamily="@font/jakartasansmedium"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/action_add_type_label"
+        tools:ignore="TouchTargetSizeCheck"
+        tools:layout_editor_absoluteX="18dp" />
 
     <TextView
         android:id="@+id/action_add_ingredients_recipes_label"
@@ -142,6 +148,7 @@
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
+        android:textSize="12sp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/action_add_type_spinner"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -149,9 +156,10 @@
     <EditText
         android:id="@+id/action_add_ingredients_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="80dp"
         android:background="@drawable/edit_text_style"
         android:padding="14dp"
+        android:textSize="16sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -171,6 +179,7 @@
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
+        android:textSize="12sp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/action_add_ingredients_recipes_text"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -178,11 +187,12 @@
     <EditText
         android:id="@+id/action_add_steps_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="140dp"
         android:background="@drawable/edit_text_style"
         android:padding="14dp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
+        android:textSize="16sp"
         android:textColorHint="@color/text_disable"
         android:hint="Ayam Geprek Furina"
         android:layout_marginTop="10dp"
@@ -198,8 +208,10 @@
         android:layout_height="80dp"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints"
-        android:layout_marginLeft="5dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <ImageButton
             android:id="@+id/action_navigation_home_button"
@@ -260,8 +272,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <ProgressBar
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_style_rounded"
                 android:backgroundTint="@android:color/white"
