--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_home_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
@@ -16,7 +16,7 @@
         android:layout_marginLeft="80dp"
         android:layout_marginTop="40dp"
         android:text="Happy Cooking"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasanssemibold"
         android:textColor="@color/text_disable_secondary"
         tools:ignore="MissingConstraints" />
@@ -35,10 +35,10 @@
         android:id="@+id/home_greetings_user_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_disable"
+        android:textColor="@android:color/darker_gray"
         android:text="Elisia Safina"
         android:fontFamily="@font/jakartasansbold"
-        android:textSize="42sp"
+        android:textSize="32sp"
         app:layout_constraintTop_toBottomOf="@id/home_greetings_label"
         app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
 
@@ -49,8 +49,8 @@
         android:textColor="@color/text_disable"
         android:text="Find Recipes"
         android:fontFamily="@font/jakartasanssemibold"
-        android:textSize="14sp"
-        android:layout_marginTop="62dp"
+        android:textSize="12sp"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/home_greetings_user_label"
         app:layout_constraintLeft_toLeftOf="@id/home_greetings_icon"/>
 
@@ -62,10 +62,10 @@
         android:padding="14dp"
         android:fontFamily="@font/jakartasanssemibold"
         android:textColor="@color/primary"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textColorHint="@color/text_disable"
         android:hint="Ayam Geprek"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintTop_toBottomOf="@id/home_search_label"
@@ -80,8 +80,8 @@
         android:textColor="@color/text_disable"
         android:text="Randomize Recipes"
         android:fontFamily="@font/jakartasanssemibold"
-        android:textSize="18sp"
-        android:layout_marginTop="62dp"
+        android:textSize="14sp"
+        android:layout_marginTop="42dp"
         app:layout_constraintTop_toBottomOf="@id/home_search_text"
         app:layout_constraintLeft_toLeftOf="@id/home_search_text"/>
 
@@ -92,7 +92,7 @@
         android:text="See All"
         android:fontFamily="@font/jakartasanssemibold"
         android:textColor="@color/text_disable"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintTop_toTopOf="@id/home_randomize_recipes_button"
         app:layout_constraintRight_toRightOf="@id/home_search_text"
         android:layout_marginRight="20dp"/>
@@ -100,7 +100,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recycle_view_recipes"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/home_randomize_recipes_button"
         app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
         android:orientation="horizontal"
@@ -112,9 +113,11 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
+        android:background="@android:color/white"
         tools:ignore="MissingConstraints"
-        android:layout_marginLeft="5dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <ImageButton
             android:id="@+id/home_navigation_home_button"
