--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp">
+    tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/main_icon_app"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:src="@drawable/icon_app"
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        />
     <TextView
         android:id="@+id/login_welcome_text_label"
         android:layout_width="wrap_content"
@@ -17,20 +23,20 @@
         android:text="Welcome Back"
         android:textColor="@color/primary"
         android:textAlignment="center"
-        android:textSize="40dp"
+        android:textSize="34dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/main_icon_app"
+        android:layout_marginTop="0dp"
         tools:ignore="MissingConstraints"/>
 
     <TextView
         android:id="@+id/login_desc_label"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jakartasansmedium"
         android:text="Find your Recipes In One app"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textColor="@color/primary"
         app:layout_constraintLeft_toLeftOf="@id/login_welcome_text_label"
         app:layout_constraintTop_toBottomOf="@id/login_welcome_text_label" />
@@ -39,7 +45,8 @@
         android:id="@+id/login_username_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="Email"
+        android:textSize="14sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="40dp"
@@ -52,15 +59,17 @@
         android:id="@+id/login_username_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/edit_text_style"
         android:padding="18dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
         android:hint="Username"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/login_username_label"
-        app:layout_constraintLeft_toLeftOf="parent"
         tools:ignore="MissingConstraints"/>
 
     <TextView
@@ -68,6 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password"
+        android:textSize="14sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="20dp"
@@ -80,8 +90,11 @@
         android:id="@+id/login_password_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:background="@drawable/edit_text_style"
         android:padding="18dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -96,12 +109,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:padding="18dp"
-        android:textSize="16sp"
+        android:padding="14dp"
+        android:textSize="12sp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@android:color/white"
         android:textAlignment="center"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="42dp"
         android:background="@drawable/button_style"
         app:layout_constraintTop_toBottomOf="@id/login_password_text"
         tools:ignore="MissingConstraints" />
@@ -111,25 +126,62 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Don't have an account? Register Here"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/login_button_login"
         app:layout_constraintLeft_toLeftOf="@id/login_button_login"
         app:layout_constraintRight_toRightOf="@id/login_button_login"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="12dp"/>
+
     <Button
         android:id="@+id/login_button_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:padding="18dp"
-        android:textSize="16sp"
-        android:fontFamily="@font/jakartasansmedium"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
-        android:layout_marginBottom="30dp"
         android:background="@drawable/button_style"
-        app:layout_constraintTop_toBottomOf="@id/login_register_label"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:fontFamily="@font/jakartasansmedium"
+        android:padding="14dp"
+        android:text="Register"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        android:layout_marginTop="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_register_label"
         tools:ignore="MissingConstraints" />
+
+    <FrameLayout
+        android:id="@+id/login_loading_progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:background="#80000000"/>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ProgressBar
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_style_rounded"
+                android:backgroundTint="@android:color/white"
+                android:indeterminate="true"
+                tools:ignore="MissingConstraints"
+                android:layout_marginBottom="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:fontFamily="@font/jakartasansmedium"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                android:gravity="center"/>
+        </LinearLayout>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
