--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_profile_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
@@ -16,7 +16,7 @@
         android:layout_marginLeft="80dp"
         android:layout_marginTop="40dp"
         android:text="Happy Cooking"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasanssemibold"
         android:textColor="@color/text_disable_secondary"
         tools:ignore="MissingConstraints" />
@@ -38,7 +38,7 @@
         android:textColor="@color/text_disable"
         android:text="Elisia Safina"
         android:fontFamily="@font/jakartasansbold"
-        android:textSize="42sp"
+        android:textSize="32sp"
         app:layout_constraintTop_toBottomOf="@id/profile_greetings_label"
         app:layout_constraintLeft_toLeftOf="@id/profile_greetings_icon"/>
 
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="40dp"
@@ -60,7 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_style"
-        android:padding="18dp"
+        android:padding="14dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -77,6 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Password"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="20dp"
@@ -90,7 +93,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_style"
-        android:padding="18dp"
+        android:padding="14dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -107,6 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginTop="20dp"
@@ -120,7 +125,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_style"
-        android:padding="18dp"
+        android:padding="14dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -137,8 +143,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Edit"
-        android:padding="18dp"
-        android:textSize="18sp"
+        android:padding="14dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@android:color/white"
         android:textAlignment="center"
@@ -149,14 +155,33 @@
         app:layout_constraintTop_toBottomOf="@id/profile_name_text"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/profile_button_action_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        android:padding="14dp"
+        android:textSize="14sp"
+        android:fontFamily="@font/jakartasansmedium"
+        android:textColor="@android:color/white"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:background="@drawable/button_style"
+        app:layout_constraintTop_toBottomOf="@id/profile_button_action_edit"
+        tools:ignore="MissingConstraints" />
+
     <LinearLayout
         android:id="@+id/home_frame_navigation"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
         tools:ignore="MissingConstraints"
-        android:layout_marginLeft="5dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <ImageButton
             android:id="@+id/profile_navigation_home_button"
@@ -217,8 +242,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <ProgressBar
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_style_rounded"
                 android:backgroundTint="@android:color/white"
