--- a/app/src/main/res/layout/activity_action_recipes.xml
+++ b/app/src/main/res/layout/activity_action_recipes.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_action_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActionRecipesActivity">
@@ -10,7 +10,7 @@
     <FrameLayout
         android:id="@+id/action_recipes_image_frame"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="160dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/button_style_rounded"
             android:fontFamily="@font/jakartasansmedium"
             android:padding="10dp"
@@ -45,7 +45,7 @@
     <LinearLayout
         android:id="@+id/action_menu_add_frame"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         app:layout_constraintTop_toBottomOf="@id/action_recipes_image_frame"
         android:orientation="horizontal">
 
@@ -68,14 +68,15 @@
 
         <Button
             android:id="@+id/action_add_recipes_button"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="110dp"
             android:layout_gravity="center_vertical"
             android:background="@drawable/button_style_rounded"
             android:fontFamily="@font/jakartasansmedium"
             android:padding="10dp"
-            android:text="Add Recipes"
+            android:text="Add"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="14dp"
             tools:ignore="TextSizeCheck" />
@@ -87,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="name recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -97,24 +99,27 @@
         android:id="@+id/action_add_name_recipes_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edit_text_style"
-        android:padding="14dp"
-        android:fontFamily="@font/jakartasansmedium"
-        android:textColor="@color/primary"
-        android:textColorHint="@color/text_disable"
-        android:hint="Ayam Geprek Furina"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
-        app:layout_constraintTop_toBottomOf="@id/action_add_name_recipes_label"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/edit_text_style"
+        android:fontFamily="@font/jakartasansmedium"
+        android:hint="Ayam Geprek Furina"
+        android:minHeight="48dp"
+        android:padding="12dp"
+        android:textColor="@color/primary"
+        android:textColorHint="@color/text_disable"
+        android:textSize="14sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toBottomOf="@id/action_add_name_recipes_label"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/action_add_type_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="type Recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -139,6 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ingredients recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -149,9 +155,10 @@
     <EditText
         android:id="@+id/action_add_ingredients_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="80dp"
         android:background="@drawable/edit_text_style"
-        android:padding="14dp"
+        android:padding="12dp"
+        android:textSize="14sp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
@@ -168,6 +175,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="step recipes"
+        android:textSize="12sp"
         android:textColor="@color/text_disable"
         android:fontFamily="@font/jakartasansmedium"
         android:layout_marginLeft="18dp"
@@ -178,13 +186,14 @@
     <EditText
         android:id="@+id/action_add_steps_recipes_text"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="120dp"
         android:background="@drawable/edit_text_style"
-        android:padding="14dp"
+        android:padding="12dp"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:textColorHint="@color/text_disable"
         android:hint="Ayam Geprek Furina"
+        android:textSize="14sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
@@ -197,38 +206,43 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
-        android:layout_marginLeft="5dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <ImageButton
             android:id="@+id/action_navigation_home_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_home_icon"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/action_navigation_list_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_list_icon"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/action_navigation_liked_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_favorite_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/action_navigation_edit_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_edit_recipes_icon"
             app:tint="@color/primary"
@@ -236,8 +250,9 @@
 
         <ImageButton
             android:id="@+id/action_navigation_account_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_account_icon"
             tools:ignore="SpeakableTextPresentCheck" />
