--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -101,6 +101,7 @@
         android:id="@+id/home_recycle_view_recipes"
         android:layout_width="match_parent"
         android:layout_marginTop="10dp"
+        android:scrollbars="horizontal"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/home_randomize_recipes_button"
         app:layout_constraintBottom_toTopOf="@id/home_frame_navigation"
@@ -114,15 +115,15 @@
         android:layout_height="80dp"
         android:orientation="horizontal"
         android:background="@android:color/white"
-        tools:ignore="MissingConstraints"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
         <ImageButton
             android:id="@+id/home_navigation_home_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_home_icon"
             app:tint="@color/primary"
@@ -130,32 +131,36 @@
 
         <ImageButton
             android:id="@+id/profile_navigation_list_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_list_icon"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/profile_navigation_liked_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_favorite_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/profile_navigation_edit_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_edit_recipes_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/profile_navigation_account_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_account_icon"
             tools:ignore="SpeakableTextPresentCheck" />
