--- a/app/src/main/res/layout/activity_view_recipes.xml
+++ b/app/src/main/res/layout/activity_view_recipes.xml
@@ -118,6 +118,7 @@
         android:layout_height="180dp"
         android:background="@drawable/edit_text_style"
         android:padding="14dp"
+        android:layout_weight="1"
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:layout_marginTop="10dp"
@@ -149,6 +150,7 @@
         android:fontFamily="@font/jakartasansmedium"
         android:textColor="@color/primary"
         android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
         app:layout_constraintTop_toBottomOf="@id/action_add_steps_recipes_label"
@@ -160,7 +162,6 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
-        tools:ignore="MissingConstraints"
         android:background="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -168,8 +169,9 @@
 
         <ImageButton
             android:id="@+id/view_navigation_home_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_home_icon"
             app:tint="@color/primary"
@@ -177,32 +179,36 @@
 
         <ImageButton
             android:id="@+id/view_navigation_list_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_list_icon"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/view_navigation_liked_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_favorite_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/view_navigation_edit_recipes_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_edit_recipes_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/view_navigation_account_button"
-            android:layout_width="80dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@drawable/button_style_whithout_backgorund"
             android:src="@drawable/navigation_account_icon"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -236,7 +242,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Proses Upload"
+                android:text="Proses Hapus"
                 android:fontFamily="@font/jakartasansmedium"
                 android:textSize="18sp"
                 android:textColor="@android:color/white"
